v5.7
-----
+ Adds Steam review percentage of most helpful positive and negative reviews on app pages
+ "Hide -> DLC for games you do not own" now works with the new releases section on the homepage
+ Added new option to hide owned games on the homepage
: Price history now shows for all apps on a store page, not just the first
: Fixed a bug that caused early access banners on the "featured" section to not position correctly
: Fixed a bug that caused regional pricing on sale pages to sometimes display incorrectly 

v5.6.1
-----
: Fix Early Access overlays on Steam homepage

v5.6
-----
+ Added ability to add a custom amount to your Steam wallet
+ Added checkboxes to DLC list on app pages, letting you select certain DLC and add to cart easily
+ Added sort option to badge page to sort by number of card drops remaining
+ Added card prices to market links on badge pages
+ Added "cost to complete badge" to unobtained badges
+ Added option to display advanced navigation on inventory pages
+ Added foil badge and foil badge progress to app pages
: Updated Early Access banner graphics (thanks SolventSnake!)
- Removed function to add all unowned DLC to cart on app pages due to conflicts with new feature

v5.5
-----
+ Added "Early Access" image banners to Early Access games on Steam
+ Added a list of friends that own a game on the "friends that own" page
+ Added badge progress and remaining card drops to app pages
: Fixed bug where badge filter wasn't working with some languages
: Fixed bug in wishlist sorting that would cause it to fail if a game had no price displayed
: Fixed bug that caused wishlist not to highlight under certain circumstances

v5.4
-----
+ Added option to hide DLC for games you do not own
+ Added option to add button on app pages to test your system requirements in Steam (experimental!)
+ Sorting wishlist by discount now additionally subsorts by price (lowest -> highest)
: Fixed inventory market price check displaying "Sold!" when looking up prices