@@ -88,7 +88,9 @@ function save_options() {
 		$("#shinyloot").prop('checked'),
 		$("#dlgamer").prop('checked'),			
 		$("#humblestore").prop('checked'),
-		$("#indiegamestand").prop('checked')
+		$("#indiegamestand").prop('checked'),
+		$("#squenix").prop('checked'),
+		$("#bundlestars").prop('checked')
 	];
 	showregionalprice = $("#regional_price_on").val();
 	regional_hideworld = $("#regional_hideworld").prop('checked');
@@ -305,6 +307,8 @@ function toggle_stores() {
 			$("#dlgamer").prop('checked', settings.stores[19]);
 			$("#humblestore").prop('checked', settings.stores[20]);
 			$("#indiegamestand").prop('checked', settings.stores[21]);
+			$("#squenix").prop('checked', settings.stores[22]);
+			$("#bundlestars").prop('checked', settings.stores[23]);
 		});
 		break;
 	}
@@ -398,7 +402,7 @@ function load_options() {
 		if (settings.hidetmsymbols === undefined) { settings.hidetmsymbols = false; chrome.storage.sync.set({'hidetmsymbols': settings.hidetmsymbols}); }
 
 		if (settings.showallstores === undefined) { settings.showallstores = true; chrome.storage.sync.set({'showallstores': settings.showallstores}); }
-		if (settings.stores === undefined) { settings.stores = [true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true]; chrome.storage.sync.set({'stores': settings.stores}); }
+		if (settings.stores === undefined) { settings.stores = [true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true]; chrome.storage.sync.set({'stores': settings.stores}); }
 		if (settings.showregionalprice === undefined) { settings.showregionalprice = "mouse"; chrome.storage.sync.set({'showregionalprice': settings.showregionalprice}); }
 		if (settings.regional_countries === undefined) { settings.regional_countries = ["us","gb","eu1","eu2","ru","br","au"]; chrome.storage.sync.set({'regional_countries': settings.regional_countries}); }
 
