@@ -317,6 +317,12 @@
 						<td>
 							<input type="checkbox" id="indiegamestand"><label for="indiegamestand">IndieGameStand</label>
 						</td>
+						<td>
+							<input type="checkbox" id="squenix"><label for="squenix">Square Enix</label>
+						</td>
+						<td>
+							<input type="checkbox" id="bundlestars"><label for="bundlestars">Bundle Stars</label>
+						</td>
 					</tr>
 				</table>
 				<li class="header" id="store_regionalprice_header">Regional Price Comparison</li>
